@@ -1,3 +1,23 @@
+/*
+ *	radio reddit for android: mobile app to listen to radioreddit.com
+ *  Copyright (C) 2011 Bryan Denny
+ *  
+ *  This file is part of "radio reddit for android"
+ *
+ *  "radio reddit for android" is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  "radio reddit for android" is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with "radio reddit for android".  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 package net.mandaria.radioreddit.activities;
 
 import android.support.v4.app.Fragment;
@@ -17,6 +37,7 @@ import net.mandaria.radioreddit.R;
 import net.mandaria.radioreddit.R.layout;
 import net.mandaria.radioreddit.activities.TopCharts.TabsAdapter;
 import net.mandaria.radioreddit.fragments.SongListFragment;
+import net.mandaria.radioreddit.utils.ActivityUtil;
 
 import com.viewpagerindicator.TabPageIndicator;
 
@@ -134,6 +155,7 @@ public class RecentlyPlayed extends SherlockFragmentActivity
     public void onResume()
     {
     	super.onResume();
+    	ActivityUtil.SetKeepScreenOn(this);
     }
     
     
